# worker-Website-Content-Extractor

./: .dockerignore  .gitignore  Dockerfile  README.md  comprehensive_test.py  crawler_c4ai.py  input_schema.json  main.py  pyproject.toml  requirements.txt  scraper.py  sdk.py  sdk_pb2.py  sdk_pb2_grpc.py  test_cdp_connection.py  test_report.json  项目说明与使用指南.md
.actor/: CHECKLIST.md  actor.json  dataset_schema.json  input_schema.json  output_schema.json
scripts/: ux_matrix.py  ux_matrix_output.json  ux_matrix_report.txt  ux_smoke_output.json
src/crawl4ai_actor/: __init__.py  config.py  crawler.py  main.py
src/crawl4ai_actor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_config.py  test_crawler_utils.py
